# trackmind

./: .env.example  .gitignore  README.md  pyproject.toml
app/: main.py
app/core/: config.py  logging.py
