[tool.poetry]
name = "trackmind"
version = "0.1.0"
description = ""
authors = ["Yoda <yoda@example.com>"]
readme = "README.md"
packages = [{include = "app"}]

[tool.poetry.dependencies]
python = "^3.13"
fastapi = "^0.116.1"
sqlalchemy = "^2.0.43"
uvicorn = "^0.35.0"
pydantic = "^2.11.7"
pydantic-settings = "^2.0.0"

[tool.poetry.group.dev.dependencies]
black = "^24.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

# Настройки Black
[tool.black]
line-length = 88
target-version = ['py313']
include = '\.pyi?$'
extend-exclude = '''
/(
  # directories
  \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | build
  | dist
)/
'''

